<resources>
    <string name="app_name">amigas do peito</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btnEntrar">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrar_com_facebook">Entrar com Facebook</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="ou">ou</string>
    <string name="hint_login_email">E-mail</string>
    <string name="hint_login_senha">Senha</string>
    <string name="continue_com">Continue com:</string>
    <string name="text_nome">Nome</string>
    <string name="text_cadastro_email">E-mail</string>
    <string name="text_cadastro_senha">Senha</string>
    <string name="text_cadastro_tenho_conta">Já tenho conta.</string>
    <string name="text_cadastro_login">LOGIN</string>
    <string name="btn_cadastro_salvar">Salvar</string>
</resources>